Updated Spring Security